--- a/css/style.css
+++ b/css/style.css
@@ -1002,7 +1002,7 @@ body {
 }
    
 .button-order {
-    padding: 10px 32px;   
+    padding: 10px 32px;
     margin-bottom: 0px;
     margin-left: auto;
     margin-right: auto;
@@ -1020,6 +1020,66 @@ body {
     line-height: 1.9;
     letter-spacing: 0.06em;
     text-align: center;
+}
+
+/*Form-footer*/
+
+.icon-form {
+width: 24px;
+height: 24px;
+margin-left: 10px;
+}
+
+.form-button {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 200px;
+padding: 10px 28px;
+border: none;
+border-radius: 4px;
+
+color: var(--white);
+background-color: var(--accent-color);
+cursor: pointer;
+
+font-family: 'Roboto';
+font-weight: 700;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.06em;
+text-align: center;
+}
+
+.form-title {
+  display: inline-block;
+  margin-right: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white);
+}
+
+.form-in {
+width: 358px;
+height: 50px;
+padding-top: 15px;
+padding-bottom: 15px;
+padding-right: 295px;
+padding-left: 16px;
+border: 1px solid rgb(255, 255, 255, 30%);
+
+color: var(--color-button);
+background-color: var(--footer-color);
+
+
 }
 
 /*modal window*/
