--- a/css/style.css
+++ b/css/style.css
@@ -1150,10 +1150,7 @@ fill: var(--accent-color);
 /*Form-modal-window*/
 
 .modal .form-modal {
-padding-top: 0px;
-padding-bottom: 40px;
-padding-left: 41px;
-margin-right: 39px;
+padding: 0px;
 width: 100%;
 height: 100%;
 margin: 0;
