--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {
      width: 1200px;
      margin-left: auto;
      margin-right: auto;
-     /*outline: 3px solid tomato;*/
+     
      padding-right: 15px;
      padding-left: 15px;
      padding-top: 0px;    
@@ -213,7 +213,8 @@ body {
     margin-right: auto;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: linear-gradient(to right, rgba(43, 44, 58, 0.4), rgba(43, 44, 58, 0.4)), url("../images/img-hero-squoosh.jpg");   
+    background-image: linear-gradient(to right, rgba(43, 44, 58, 0.4),
+    rgba(43, 44, 58, 0.4)), url("../images/img-hero-squoosh.jpg");   
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1176,62 +1177,142 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 
-margin: 0px auto 20px auto;
+margin: 0px auto;
 width: 448px;
-height: 342px;
+
 }
 
 .label-md {
-margin-bottom: 4px;
-
+position: relative;
+margin-bottom: 10px;
 color: var(--sec-color);
 font-family: 'Roboto';
 font-weight: 400;
 font-size: 12px;
 line-height: 1.2;
 letter-spacing: 0.01em;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-md,
 .textarea-md {
 width: 448px;
 height: 40px;
-margin-bottom: 10px;
-padding-left: 12px;
+margin-top: 4px;
+padding-left: 35px;
 
-color: rgba(117, 117, 117, 0.5);
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+cursor: pointer;
 
 background-color: var(--white);
-border: 1px solid rgba(33, 33, 33, 0.2);
-/*box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);*/
-border-radius: 4px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-md::placeholder {
+font-family: 'Roboto';
+font-weight: 400;
+font-size: 12px;
+line-height: 1.2;
+letter-spacing: 0.01em;
+color: rgba(117, 117, 117, 0.5);
+opacity: 0;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-md:focus::placeholder {
+opacity: 1;
+}
+
+.label-md:focus-within {
+    fill: var(--accent-color);
+}
+
+.label-md:hover {
+fill: var(--accent-color);
+}
+
+.input-md:focus {
+border-color: var(--accent-color);
+outline-color: var(--accent-color);
+}
+.input-md:hover {
+border-color: var(--accent-color);
+}
+
+.icon-md {
+position: absolute;
+top: 50%;
+left: 12px;
+width: 18px;
+height: 18px;
 }
 
 .textarea-md {
 height: 120px;
 resize: none;
+padding: 12px 16px;
+
+}
+.textarea-md:focus {
+    border-color: var(--accent-color);
+    outline-color: var(--accent-color);
+}
+
+.textarea-md:hover {
+    border-color: var(--accent-color);
 }
 
 .chekbox-md {
 display: flex;
 justify-content: center;
-
-
 height: 24px;
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 30px;
 }
 
+.chekbox-input {
+position: absolute;
+width: 1px;
+height: 1px;
+overflow: hidden;
+clip: rect(0 0 0 0);
+}
+
+.chekbox-icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border: 1px solid var(--main-color);
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.10);
+    background-color: var(--white);
+    margin-right: 8px;
+    fill: none;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.chekbox-input:checked + .chekbox-icon {
+fill: var(--accent-color);
+border-color: var(--accent-color);
+}
+
+
+/*.chekbox-input:checked + .chekbox-icon {
+    background-image: url("../images/svg/icon-check.svg");
+    background-size: contain;
+    background-origin: border-box;
+    border-color: var(--accent-color);
+}*/
+
 .confidence-md {
+display: flex;
+align-items: center;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.7;
 letter-spacing: 0.03em;
 color: var(--sec-color);
-margin-left: 7px;
 
 }
 
@@ -1244,7 +1325,6 @@ margin-left: 5px;
 
 .form-btn{
 display: flex;
-
 align-items: center;
 width: 200px;
 padding: 10px 52px;
@@ -1264,7 +1344,6 @@ font-size: 16px;
 line-height: 1.9;
 letter-spacing: 0.06em;
 text-align: center;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 
