--- a/css/style.css
+++ b/css/style.css
@@ -1186,7 +1186,6 @@ width: 448px;
 position: relative;
 margin-bottom: 10px;
 color: var(--sec-color);
-font-family: 'Roboto';
 font-weight: 400;
 font-size: 12px;
 line-height: 1.2;
@@ -1197,16 +1196,17 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .input-md,
 .textarea-md {
 width: 448px;
-height: 40px;
 margin-top: 4px;
 padding-left: 35px;
+padding-top: 11px;
+padding-bottom: 11px;
 
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 cursor: pointer;
 
 background-color: var(--white);
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-md::placeholder {
@@ -1233,7 +1233,6 @@ fill: var(--accent-color);
 }
 
 .input-md:focus {
-border-color: var(--accent-color);
 outline-color: var(--accent-color);
 }
 .input-md:hover {
