--- a/css/style.css
+++ b/css/style.css
@@ -1251,7 +1251,7 @@ height: 18px;
 height: 120px;
 resize: none;
 padding: 12px 16px;
-
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .textarea-md:focus {
     border-color: var(--accent-color);
@@ -1317,9 +1317,13 @@ color: var(--sec-color);
 
 .confidence-link {
 color: var(--accent-color);
-text-decoration: underline;
-text-underline-position: var(--accent-color);
+text-decoration-line: underline;
+text-underline-position: under;
 margin-left: 5px;
+}
+
+.list {
+text-decoration: none;
 }
 
 .form-btn{
@@ -1343,6 +1347,13 @@ font-size: 16px;
 line-height: 1.9;
 letter-spacing: 0.06em;
 text-align: center;
+transition: background-colo 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.form-btn:hover,
+.form-btn:focus {
+    background-color: #188CE8;
 }
 
 
