--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,24 @@ body {
    
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.no-scroll {
+    overflow: hidden;
+}
+
 /*logo*/
 .logo {
     color: var(--main-color);
@@ -81,17 +99,14 @@ body {
  /*header*/
  
  .conteiner-primary {
-     width: 1200px;
+     min-width: 1200px;
      margin-left: auto;
      margin-right: auto;
      
      padding-right: 15px;
      padding-left: 15px;
-     padding-top: 0px;    
-     padding-bottom: 0px;
  }
  
-
 /*site-nav*/
 .site-nav .link {
      
@@ -102,6 +117,7 @@ body {
      font-size: 14px;
      line-height: 1.2;
      letter-spacing: 0.02em;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav .link:hover {
     color: var(--accent-color);
@@ -154,7 +170,10 @@ body {
     font-size: 14px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-   
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .item-contact .link:hover  {
     color: var(--accent-color);
@@ -203,12 +222,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 696px;
+    min-width: 696px;
         }
 
     .overlay {
-    height: 600;
-    max-width: 1600;
+    min-width: 1600px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 200px;
@@ -430,6 +448,7 @@ body {
 }
 
 .team-title {
+    min-width: 1200px;
     margin-bottom: 50px;
     margin-top: 0px;
 }
@@ -444,14 +463,8 @@ body {
     width: 270px;
  }
 
-    .social {
-        width: 206px;
-        margin-right: 0px;
-        margin-left: 0px;
-    }
-    .social-list {
+      .social-list {
     display: flex;
-    
     justify-content: center;
     align-items: center;
     list-style: none;
@@ -503,12 +516,7 @@ body {
     fill: var(--white);
         }
 
-    .footer-social {
-        display: block;
-        width: 144px;
-     }
-
-        /*Regular clients*/
+    /*Regular clients*/
 
     .section-clients {
     padding-bottom: 94px;
@@ -576,24 +584,15 @@ body {
 
 /*portfolio site-link*/
 
- .header-portfolio {
+ .header {
     border-bottom: 1px solid #ECECEC;
    }
 
- .conteiner-portfolio {
-     margin-bottom: 0px;
-     padding-left: 0px;
-     padding-right: 0px;
-     padding-top: 24px;
-     padding-bottom: 24px;
- }
 /*site-nav -portfolio*/
 
  .flex-conteiner {
     display: flex;
     align-items: center;
-    padding-left: 0px;
-    padding-right: 0px;
  }
 
 .page-header {
@@ -645,9 +644,6 @@ body {
 
 .item-contact .contact-item {
     margin-right: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
 } 
 
 .item-contact .contact-item:last-child {
@@ -662,7 +658,7 @@ body {
 /*portfolio-exampl*/
 
     .portfolio {
-    width: 1200px;
+    min-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     padding-right: 15px;
@@ -672,14 +668,9 @@ body {
     list-style: none;
 }
     .card-exampl {
-    display: flex;
-    flex-direction: column;
-
     padding: 20px 24px;
-    
-    margin-right: auto;
-    margin-left: auto;
-    /*width: 322px;*/
+    border: 1px solid #EEEEEE;
+    border-top: none;
      }
 
     .exampl {
@@ -710,51 +701,33 @@ body {
     }
 
     .exampl-item .exampl-link:hover {
-    border: 1px solid rgba(200, 193, 193, 0.138);
-    box-shadow: 0px 2px 2px 0px rgba(10, 7, 7, 0.12),
-    0px 1px 2px 0px rgba(27, 27, 27, 0.12), 0px 3px 1px 0px rgba(41, 39, 39, 0.17);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 12%),
+            0px 4px 4px rgba(0, 0, 0, 6%), 1px 4px 6px rgba(0, 0, 0, 4%);
     }
     
     .exampl-item .exampl-link:focus {
-    border: 1px solid rgba(200, 193, 193, 0.138);
-    box-shadow: 0px 2px 2px 0px rgba(10, 7, 7, 0.12),
-    0px 1px 2px 0px rgba(27, 27, 27, 0.12), 0px 3px 1px 0px rgba(41, 39, 39, 0.17);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 12%),
+            0px 4px 4px rgba(0, 0, 0, 6%), 1px 4px 6px rgba(0, 0, 0, 4%);
          }
 
     .exampl-link {
-    display: inline-block;
-    padding: 0;
-            
-    color: var(--main-color);
-    
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    text-decoration-line: none;
-    border: 1px solid rgba(201, 201, 208, 0.193);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    display: block;
+        text-decoration: none;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
         
     .exampl-content {
-    display: block;
     margin: 0;
    
     color: var(--sec-color);
 
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.9;
     letter-spacing: 0.03em;
     }
 
     .exampl-title {
-    display: block;
-
-    margin-right: 0px;
-    margin-left: 0px;
     margin-top: 0px;
     margin-bottom: 4px;
 
@@ -768,7 +741,6 @@ body {
  }
     .exampl-site {
     display: block;
-    width: 370px;
      }       
            
 
@@ -903,37 +875,23 @@ body {
     /*footer-social-link*/
         .footer-flex {
         display: flex;
-        width: 1200px;
-        align-items: center;
-        margin: 0px;
+        align-items: baseline;
         }
-
-        .our-flex {
-        display: flex;
-        flex-direction: column;
-        }
-        
+     
         .conteiner-social {
-        display: flex;
-        flex-direction: column;
-         margin-left: 70px;
+        margin-left: 70px;
         }
 
         .social-footer .footer-icon {
         fill: var(--white);
         }
         .social-footer {
-        background-color: var(--accent-color);
-        background-color: rgba(0, 4, 4, 0.25);
+        background-color: rgba(255, 255, 255, 0.1);
         }
     .footer-social {
-        display: inline-block;
-        margin-right: 0px;
-        margin-right: 0px;
         margin-top: 0px;
         margin-bottom: 20px;
 
-        font-style: normal;
         font-weight: 700;
         font-size: 14px;
         line-height: 1.1;
@@ -1126,8 +1084,10 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%) scale(1);
 
+padding: 40px;
 min-width: 528px;
 min-height: 581px;
+border-radius: 4px;
 
 background-color: var(--white);
 
@@ -1135,19 +1095,29 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close {
-display: block;
-margin-right: 0px;
-margin-left: auto;
-padding: 4px;
-height: 30px;
-width: 30px;
-fill: var(--main-color);
-stroke: rgba(0, 4, 4, 25%);
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover {
-fill: var(--accent-color);
+    fill: var(--accent-color);
+}
+
+.modal-icon {
+    width: 18px;
+    height: 18px;
+
 }
 
 /*Form-modal-window*/
@@ -1177,7 +1147,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 
-margin: 0px auto;
+margin: 0px auto 20px;
 width: 448px;
 
 }
@@ -1191,6 +1161,10 @@ font-size: 12px;
 line-height: 1.2;
 letter-spacing: 0.01em;
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.label-md:last-child {
+    margin-bottom: 0px;
 }
 
 .input-md,
@@ -1265,6 +1239,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .chekbox-md {
 display: flex;
 justify-content: center;
+
 height: 24px;
 margin-left: auto;
 margin-right: auto;
@@ -1280,34 +1255,30 @@ clip: rect(0 0 0 0);
 }
 
 .chekbox-icon {
-    display: inline-block;
+    display: inline-flex;
     width: 16px;
     height: 15px;
     border: 1px solid var(--main-color);
     border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.10);
+    margin: 0px;
+   
     background-color: var(--white);
-    margin-right: 8px;
+ 
     fill: none;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .chekbox-input:checked + .chekbox-icon {
 fill: var(--accent-color);
 border-color: var(--accent-color);
 }
 
-
-/*.chekbox-input:checked + .chekbox-icon {
-    background-image: url("../images/svg/icon-check.svg");
-    background-size: contain;
-    background-origin: border-box;
-    border-color: var(--accent-color);
-}*/
+.chekbox-svg {
+    display: block;
+    margin: 0px;
+}
 
 .confidence-md {
-display: flex;
-align-items: center;
-font-weight: 400;
 font-size: 14px;
 line-height: 1.7;
 letter-spacing: 0.03em;
